update cors configuration